--- a/style.css
+++ b/style.css
@@ -35,8 +35,8 @@
 */
 
 :root {
-  --main-text-color: rgb(224, 17, 17);
-  --link-color: rgb(214, 47, 236);
+  --main-text-color: rgb(255, 255, 255);
+  --link-color: rgba(255, 255, 255, 0.752);
 }
 
 body {
@@ -49,11 +49,22 @@ body {
     line-height: 1.6em;
     color: var(--main-text-color);
     /* background-color: white; */
-    background-image: url('./image/ragnhild_og_jorgen.jpg');
+    background-image: url('./images/ragnhild_og_jorgen.jpg');
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
     background-attachment: fixed;
+}
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.421); /* Dark overlay */
+  pointer-events: none;
+  z-index: -1;
 }
 h1, h2, h3, h4 {
   font-family: sans-serif;
